# specter

./: Cargo.toml  Makefile  README.md  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/specter-actuator/: Cargo.toml
crates/specter-actuator/src/: env.rs  lib.rs  lifecycle.rs  os.rs  permits.rs  pipe.rs  pool.rs  resolve.rs  resolve_tests.rs  spawner.rs  testkit.rs  timer.rs  tmp.rs
crates/specter-actuator/src/pool/: state.rs
crates/specter-actuator/tests/: coalescing.rs  concurrency.rs  env_and_argv.rs  failures.rs  pipe_drain.rs  plan_atomicity.rs  shutdown.rs
crates/specter-actuator/tests/common/: mod.rs
crates/specter-bin/: Cargo.toml
crates/specter-bin/src/: actuator.rs  app.rs  channels.rs  driver.rs  lib.rs  loader.rs  main.rs  observability.rs  signals.rs  tracing_init.rs
crates/specter-bin/src/driver/: broker.rs  conns.rs  forward.rs  hub.rs  ipc.rs  reactor.rs  reload.rs  state.rs  tests.rs  tick.rs  wake.rs
crates/specter-bin/src/driver/ipc/: conns.rs  dispatch.rs  hub.rs  mod.rs
crates/specter-bin/src/driver/ipc/project/: list.rs  mod.rs  program.rs  show.rs  status.rs
crates/specter-bin/src/ipc/: framing.rs  mod.rs  protocol.rs  resolve.rs  server.rs  sockpath.rs  wire.rs
crates/specter-bin/src/ipc/client/: absorb.rs  connect.rs  disable.rs  enable.rs  list.rs  mod.rs  reload.rs  show.rs  status.rs  subscribe.rs  tail.rs  wait.rs
crates/specter-bin/src/ipc/project/: list.rs  mod.rs  show.rs  status.rs
crates/specter-bin/src/ipc/render/: diag.rs  list.rs  list_table.rs  mod.rs  show.rs  show_human.rs  status.rs  status_human.rs  style.rs
crates/specter-bin/tests/: config_auto_reload.rs  ipc.rs
crates/specter-config/: Cargo.toml
crates/specter-config/proptest-regressions/: template.txt
crates/specter-config/src/: action.rs  cli.rs  config.rs  diff.rs  error.rs  file_meta.rs  lib.rs  path.rs  raw.rs  template.rs
crates/specter-config/tests/: cli.rs  diff_scenarios.rs  lenient_path.rs  parse.rs  validation.rs
crates/specter-config/tests/fixtures/: all-defaults.toml  duplicate-name.toml  full.toml  invalid-glob.toml  minimal.toml  three-watches.toml  unicode-name.toml  unknown-field.toml  unknown-placeholder.toml
crates/specter-core/: Cargo.toml
crates/specter-core/src/: diag.rs  diff.rs  effect.rs  fs_id.rs  hash.rs  ids.rs  input.rs  lib.rs  op.rs  output.rs  pattern.rs  probe.rs  profile.rs  promoter.rs  resource.rs  scan_config.rs  snapshot.rs  sub.rs  time.rs  tree.rs
crates/specter-core/src/effect/: resolve.rs  tests.rs
crates/specter-core/src/program/: builder.rs  error.rs  exec.rs  mod.rs  op.rs
crates/specter-core/src/snapshot/: tests.rs  tree.rs  tree_tests.rs
crates/specter-core/src/testkit/: builders.rs  clock.rs  diagnostics.rs  mod.rs  program.rs  sensor.rs
crates/specter-core/tests/: integration.rs
crates/specter-engine/: Cargo.toml
crates/specter-engine/src/: burst.rs  claims.rs  claims_tests.rs  counter.rs  coverage.rs  descent.rs  descent_tests.rs  discovery.rs  discovery_tests.rs  engine.rs  lib.rs  path.rs  probe.rs  probe_channel.rs  promoter.rs  promoter_claims.rs  promoter_tests.rs  reconcile.rs  refcounts.rs  stability.rs  testkit.rs  timer.rs  transitions.rs  transitions_tests.rs
crates/specter-engine/tests/: anchor_lifecycle.rs  burst_pacing.rs  coalescing_equivalence.rs  discovery_lifecycle.rs  event_filtering.rs  fire_cycle.rs  fresh_seed_fires.rs  hot_reload.rs  integration.rs  multi_profile.rs  pending_park_lifecycle.rs  pending_paths.rs  promoter_hot_reload.rs  promoter_lifecycle.rs  promoter_recovery.rs  refcount_derivation.rs  standing_obligation.rs  watch_op_rejected_purge.rs  watchroot_parent.rs
crates/specter-sensor/: Cargo.toml
crates/specter-sensor/src/: inotify.rs  kqueue.rs  lib.rs  prober.rs  testkit.rs
crates/specter-sensor/src/inotify/: config_watch.rs  ffi.rs  normalize.rs  record.rs  tests.rs  translate.rs  wake.rs  watcher.rs
crates/specter-sensor/src/kqueue/: config_watch.rs  fd.rs  ffi.rs  normalize.rs  tests.rs  translate.rs  wake.rs  watcher.rs
crates/specter-sensor/src/prober/: pool.rs  tests.rs  walk.rs
crates/specter-sensor/tests/: inotify_atomic_save.rs  inotify_basic.rs  inotify_cloexec.rs  inotify_dir_file_swap.rs  inotify_e2e_inplace_edit.rs  inotify_enospc.rs  inotify_ignored.rs  inotify_kind_verify.rs  inotify_overflow.rs  inotify_rewatch.rs  inotify_wake.rs  inotify_wd_reuse.rs  kqueue_atomic_save.rs  kqueue_basic.rs  kqueue_e2e_inplace_edit.rs  kqueue_emfile.rs  kqueue_rewatch.rs  kqueue_suppress.rs  kqueue_wake.rs  obligation_seam.rs  prober_basic.rs  prober_cancel.rs  prober_concurrency.rs  prober_recursive.rs  prober_shutdown.rs
docs/: configuration.md  control.md  install.md  placeholders.md
etc/: specter.toml.example
etc/freebsd/: specter
etc/launchd/: io.specter.plist
etc/systemd/: specter.service
