[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
version      = "0.2.7"
edition      = "2024"
rust-version = "1.95"
license      = "MIT OR Apache-2.0"

[profile.release]
lto           = true
strip         = true
codegen-units = 1

[profile.dev]
incremental = false
debug       = false

[workspace.dependencies]
# core
slotmap     = "1"
globset     = "0.4"
compact_str = "0.9"
smallvec    = "1"
siphasher   = "1"

# sensor
nix       = { version = "0.31", features = ["event", "fs", "process", "resource", "signal"] }
libc      = "0.2"
crossbeam = "0.8"

# config / bin
serde              = { version = "1", features = ["derive"] }
toml               = "1"
clap               = { version = "4", features = ["derive", "env"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"
signal-hook        = "0.4"
humantime          = "2"
humantime-serde    = "1"

# dev
proptest = "1"
tempfile = "3"

[workspace.lints.rust]
unsafe_code                   = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
redundant_pub_crate = "allow"
single_match_else   = "allow"
option_if_let_else  = "allow"
match_same_arms     = "allow"
too_many_arguments  = "allow"
too_many_lines      = "allow"
doc_markdown        = "allow"
