[package]
name                   = "specter-actuator"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
specter-core = { path = "../specter-core" }
compact_str.workspace = true
crossbeam.workspace   = true
humantime.workspace   = true
tracing.workspace = true
libc.workspace    = true
nix.workspace     = true

[dev-dependencies]
specter-core       = { path = "../specter-core", features = ["testkit"] }
slotmap.workspace  = true
tempfile.workspace = true
smallvec.workspace = true

[features]
default = []
testkit = ["specter-core/testkit"]

[lints]
workspace = true
