[package]
name                   = "specter-config"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
specter-core = { path = "../specter-core" }
serde.workspace            = true
toml.workspace             = true
clap.workspace             = true
tracing.workspace          = true
compact_str.workspace      = true
globset.workspace          = true
smallvec.workspace         = true
tinyvec.workspace          = true
humantime.workspace        = true
humantime-serde.workspace  = true

[dev-dependencies]
specter-core = { path = "../specter-core", features = ["testkit"] }
tempfile.workspace = true
proptest.workspace = true
slotmap.workspace  = true

[lints]
workspace = true
