[package]
name                   = "specter-sensor"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[features]
default = []
testkit = []

[dependencies]
specter-core = { path = "../specter-core" }
compact_str.workspace = true
crossbeam.workspace   = true
slotmap.workspace     = true
tracing.workspace     = true
libc.workspace = true

[dev-dependencies]
specter-core       = { path = "../specter-core", features = ["testkit"] }
nix.workspace      = true
tempfile.workspace = true

[lints]
workspace = true
